# moss

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_wallets.py
.claude/: settings.local.json
plans/: refactor_camoufox.md
src/: diagnostics.py  main.py
src/components/: app.py  app_bar.py  control_view.py  diagnostics_view.py  gallery_view.py  group_view.py  login_view.py  moss_view.py  navigation.py
src/contexts/: theme.py
src/examples/profiles/index/: index.py  profile_view.py
src/models/: app_model.py  gallery.py  moss.py  profile_model.py  proxy_model.py  wallet_model.py
src/mosses/animations/animated_switcher/: 01_animatedswitcher_example.py
src/mosses/buttons/button/: 01_basic_buttons.py  02_buttons_with_icons.py  03_button_with_click_event.py  04_buttons_with_custom_content.py  05_button_with_url.py  06_button_style.py  07_button_shapes.py
src/mosses/buttons/cupertinobuttons/: 01_cupertino_button_example.py  02_cupertino_filled_button_example.py  03_cupertino_tinted_button_example.py
src/mosses/buttons/cupertinosegmentedbutton/: 01_cupertino_segmented_button_example.py
src/mosses/buttons/floatingactionbutton/: 01_fab_as_regular_button.py  (+1 more)
src/services/: _browser_engine.py  _db.py  _fingerprint_defaults.py  _fingerprint_scripts.py  _profile_repo.py  _proxy_repo.py  browser_engine.py  camoufox_engine.py  cloak_engine.py  db.py  engine_utils.py  fingerprint_defaults.py  profile_repo.py  proxy_repo.py  pydoll_engine.py  task_registry.py  wallet_repo.py  zendriver_engine.py
src/testing/: create-browser.py
src/utils/: crypto.py
(+847 files in other folders)
