[project]
name = "moss"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Moss developer", email = "you@moss.com" }
]
dependencies = [
  "flet-charts",
  "flet-audio",
  "flet-video",
  "flet",
  "flet-web",
  "objgraph",
  "playwright",
  "aiosqlite",
  "camoufox[geoip]",
  "browserforge>=1.2.4",
  "httpx>=1.0.dev3",
  "pyperclip>=1.11.0",
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "com.mycompany"
product = "moss"
company = "Moss"
copyright = "Copyright (C) 2025 by Moss"

[tool.flet.app]
path = "src"

[dependency-groups]
dev = [
    "flet-cli",
    "flet-desktop",
]
